Got QAApp loading into StaticRoot of server.

--- a/QAApp/index.html
+++ b/QAApp/index.html
@@ -2,20 +2,20 @@
 <html style="height: 100%; width: 100%">
 	<head>
 		<title>My Bible QA App</title>
-		<script type="text/javascript" src="licensed/greensock/TweenMax.js"></script>
-		<script type="text/javascript" src="lib/aes.js"></script>
-		<script type="text/javascript" src="ViewNavigator.js"></script>
-		<script type="text/javascript" src="ViewLibrary.js"></script>
-		<script type="text/javascript" src="QueueViewModel.js"></script>
-		<script type="text/javascript" src="AnswerViewModel.js"></script>
-		<script type="text/javascript" src="RolesViewModel.js"></script>
-		<script type="text/javascript" src="RolesTable.js"></script>
-		<script type="text/javascript" src="ButtonRow.js"></script>
-		<script type="text/javascript" src="FormRow.js"></script>
-		<script type="text/javascript" src="RoleForms.js"></script>
-		<script type="text/javascript" src="HttpClient.js"></script>
-		<script type="text/javascript" src="AuthClient.js"></script>
-		<script type="text/javascript" src="CurrentState.js"></script>
+		<script type="text/javascript" src="qapp/licensed/greensock/TweenMax.js"></script>
+		<script type="text/javascript" src="qapp/lib/aes.js"></script>
+		<script type="text/javascript" src="qapp/ViewNavigator.js"></script>
+		<script type="text/javascript" src="qapp/ViewLibrary.js"></script>
+		<script type="text/javascript" src="qapp/QueueViewModel.js"></script>
+		<script type="text/javascript" src="qapp/AnswerViewModel.js"></script>
+		<script type="text/javascript" src="qapp/RolesViewModel.js"></script>
+		<script type="text/javascript" src="qapp/RolesTable.js"></script>
+		<script type="text/javascript" src="qapp/ButtonRow.js"></script>
+		<script type="text/javascript" src="qapp/FormRow.js"></script>
+		<script type="text/javascript" src="qapp/RoleForms.js"></script>
+		<script type="text/javascript" src="qapp/HttpClient.js"></script>
+		<script type="text/javascript" src="qapp/AuthClient.js"></script>
+		<script type="text/javascript" src="qapp/CurrentState.js"></script>
 		<script type="text/javascript">
 			function onLoad() {
 				
@@ -85,8 +85,8 @@
 				viewNavigator.httpClient.authClient.clearCredentials();
 			}
 		</script>
-		<link rel="stylesheet" type="text/css" href="./Buttons.css">
-		<link rel="stylesheet" type="text/css" href="./Fields.css">
+		<link rel="stylesheet" type="text/css" href="qapp/Buttons.css">
+		<link rel="stylesheet" type="text/css" href="qapp/Fields.css">
 	</head>
 	<body onload="onLoad()" style="height:100%; width:100%; display:block; position:relative;">
 		<div id="splashView" style="position: absolute; background: white">
