Changed scrollTo to TweenMax.set, and changed CodexView to 1 AFTER.

--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -13,6 +13,7 @@
 	<script type="text/javascript" src="licensed/greensock/Draggable.js"></script>
 	<script type="text/javascript" src="licensed/greensock/ThrowPropsPlugin.js"></script>
     <script type="text/javascript" src="licensed/greensock/TimelineLite.js"></script>
+    <script type="text/javascript" src="licensed/greensock/ScrollToPlugin.js"></script>
 	<script type="text/javascript">
 		function onBodyLoad() {
 			var initializer = new AppInitializer();
