Change iconTest to support a common node webkit test function runUnitTest.

--- a/UnitTests/index.html
+++ b/UnitTests/index.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript">
 		function onBodyLoad() {
 			console.log('DEVICE IS READY **');
-			iconsTest();
+			runUnitTest();
 		};
 	</script>
   </head>
