--- a/Versions/data/VideoIntro/KOG_OT-ARB.html
+++ b/Versions/data/VideoIntro/KOG_OT-ARB.html
@@ -1,12 +1,8 @@
- <p class="m">إنَّ هذه الرِّحلة في الأسفار المقدَّسة وقصص الأنبياء تدعوك إلى التَّلاقي مع الله الواحد الحقيقيّ، وإلى فهم خُطَّته الرَّامية إلى إنقاذ رعاياه المتمرِّدين مِن مملكة الظُّلمة وتأهيلهم للعيش معه إلى أبد الآبدين في مملكته الَّتي هي مملكة نُور. وبسبب أسلوب الرَّاوي المـُشَوِّق، والمزج الرَّائع بين الصُّور والرُّسوم المتحرِّكة، فإنَّ هذا الفيلم مُناسب للمشاهدين مِن مُختلف الأعمار والبلدان.</p>
- <p class="m">
-	 مُدَّة الفيلم كاملاً هي 222 دقيقة، موزَّعة على 15 حلقة، ومقسَّمة إلى قسمين رئيسيّين:
-1) العهد القديم: الـمَلِكُ يُعلن خُطَّته مُسَبَّقًا (الحلقات 1-8).
-2) العهد الجديد: المـَلِكُ يُنَفِّذُ خُطَّته (الحلقات 9-15).
- </p>
- <p class="m">www.rockintl.org/arabic</p>
- <p class="m">
-"مَلِكُ الـمَجْد" مُدبلج إلى العديد من اللُّغات. واللُّغة العربية هي اللُّغة الرَّابعة الَّتي اكتملت في شهر شباط/فبراير لسنة 2016.
- </p>
- <p class="m">حقوق الطَّبع محفوظة© 2016 ROCK International</p>
- <p class="m">http://king-of-glory.com</p>
+<p style="direction: rtl">إنَّ هذه الرِّحلة في الأسفار المقدَّسة وقصص الأنبياء تدعوك إلى التَّلاقي مع الله الواحد الحقيقيّ، وإلى فهم خُطَّته الرَّامية إلى إنقاذ رعاياه المتمرِّدين مِن مملكة الظُّلمة وتأهيلهم للعيش معه إلى أبد الآبدين في مملكته الَّتي هي مملكة نُور. وبسبب أسلوب الرَّاوي المـُشَوِّق، والمزج الرَّائع بين الصُّور والرُّسوم المتحرِّكة، فإنَّ هذا الفيلم مُناسب للمشاهدين مِن مُختلف الأعمار والبلدان.</p>
+
+<p style="direction: rtl">مُدَّة الفيلم كاملاً هي 222 دقيقة، موزَّعة على 15 حلقة، ومقسَّمة إلى قسمين رئيسيّين:</p>
+
+<p style="direction: rtl">1) العهد القديم: الـمَلِكُ يُعلن خُطَّته مُسَبَّقًا (الحلقات 1-8).
+<br/>2) العهد الجديد: المـَلِكُ يُنَفِّذُ خُطَّته (الحلقات 9-15).</p>
+
+<p style="text-align: center; direction:ltr">© 2017 ROCK International <span style="direction:rtl">حقوق الطَّبع محفوظة</span><br/>http://king-of-glory.com</p>
