--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -6,6 +6,7 @@
 	<meta name="msapplication-tap-highlight" content="no" />
 	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
 	<link rel="stylesheet" href="css/BibleApp.css"/>
+	<script type="text/javascript" src="js/BibleAppConfig.js"></script>
 	<script type="text/javascript" src="js/BibleApp.js"></script>
 	<script type="text/javascript" src="js/hammer.min.js"></script>
 	<script type="text/javascript" src="js/aes.js"></script>
