--- a/YourBible/www/index.html
+++ b/YourBible/www/index.html
@@ -19,6 +19,7 @@
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/hammer.min.js"></script>
         <script type="text/javascript" src="js/aes.js"></script>
+        <script type="text/javascript" src="js/BibleAppConfig.js"></script>
         <script type="text/javascript" src="js/BibleApp.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript" src="js/Credentials.js"></script>
