Remove statusbar plugin

--- a/YourBible/www/index.html
+++ b/YourBible/www/index.html
@@ -14,7 +14,7 @@
         <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'http://qa.shortsands.com:8080/*' data: gap: ; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'" /> -->
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
-       	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
+       	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, viewport-fit=cover" />
         <link rel="stylesheet" href="css/BibleApp.css"/>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/hammer.min.js"></script>
