--- a/TestApp/TestAppAndroid/app/src/main/assets/www/index.html
+++ b/TestApp/TestAppAndroid/app/src/main/assets/www/index.html
@@ -5,13 +5,17 @@
         <meta name="msapplication-tap-highlight" content="no" />
        	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, viewport-fit=cover" />
         <!-- <link rel="stylesheet" href="css/BibleApp.css"/> -->
-        <script type="text/javascript" src="test.js"></script>
+        <script type="text/javascript" src="BibleApp.js"></script>
 	</head>
 	<body>
 		<h1>Hello World</h1>
-		<h1 id="locale" style="border:solid">none</h1>
+		<h1 id="locale" style="border:solid">none2</h1>
 		<script>
-			displayLocale();
+			var ele = document.getElementById("locale");
+			ele.innerHTML = "whatever";
+			//alert("in web script");
+            //console.log("in web script");
+			testUtility();
 		</script>
 	</body>
 </html>
