--- a/TestApp/TestAppIOS/TestAppIOS/www/index.html
+++ b/TestApp/TestAppIOS/TestAppIOS/www/index.html
@@ -10,6 +10,7 @@
 	<body>
 		<h1>Hello World</h1>
 		<h1 id="locale" style="border:solid">none2</h1>
+		<h1 id="response" style="border:solid">none</h1>
 		<script>
 			var ele = document.getElementById("locale");
 			ele.innerHTML = "whatever";
