--- a/TestApp/www/index.html
+++ b/TestApp/www/index.html
@@ -14,9 +14,8 @@
 		<script>
 			var ele = document.getElementById("locale");
 			ele.innerHTML = "whatever";
-			//alert("in web script");
-            //console.log("in web script");
-			testUtility();
+            //testUtility();
+			testSqlite();
 		</script>
 	</body>
 </html>
