--- a/TestApp/TestAppAndroid/app/src/main/assets/www/index.html
+++ b/TestApp/TestAppAndroid/app/src/main/assets/www/index.html
@@ -15,7 +15,8 @@
 			var ele = document.getElementById("locale");
 			ele.innerHTML = "whatever";
             //testUtility();
-			testSqlite();
+			//testSqlite();
+			testAWS();
 		</script>
 	</body>
 </html>
