--- a/TestApp/www/index.html
+++ b/TestApp/www/index.html
@@ -16,7 +16,8 @@
 			ele.innerHTML = "whatever";
             //testUtility();
 			//testSqlite();
-			testAWS();
+			//testAWS();
+			testVideoPlayer();
 		</script>
 	</body>
 </html>
