TestApp AudioPlayer and all other plugins are working.

--- a/TestApp/TestAppAndroid/app/src/main/assets/www/index.html
+++ b/TestApp/TestAppAndroid/app/src/main/assets/www/index.html
@@ -17,7 +17,8 @@
             //testUtility();
 			//testSqlite();
 			//testAWS();
-			testVideoPlayer();
+			//testVideoPlayer();
+			testAudioPlayer();
 		</script>
 	</body>
 </html>
