--- a/TestApp/TestAppIOS/TestAppIOS/www/index.html
+++ b/TestApp/TestAppIOS/TestAppIOS/www/index.html
@@ -17,7 +17,8 @@
             //testUtility();
 			//testSqlite();
 			//testAWS();
-			testVideoPlayer();
+			//testVideoPlayer();
+			testAudioPlayer();
 		</script>
 	</body>
 </html>
