--- a/TestApp/www/index.html
+++ b/TestApp/www/index.html
@@ -14,11 +14,11 @@
 		<script>
 			var ele = document.getElementById("locale");
 			ele.innerHTML = "whatever";
-            //testUtility();
+            testUtility();
 			//testSqlite();
 			//testAWS();
 			//testVideoPlayer();
-			testAudioPlayer();
+			//testAudioPlayer();
 		</script>
 	</body>
 </html>
