TestApp Utility and Sqlite tested.

--- a/TestApp/TestAppAndroid/app/src/main/assets/www/index.html
+++ b/TestApp/TestAppAndroid/app/src/main/assets/www/index.html
@@ -14,9 +14,9 @@
 		<script>
 			var ele = document.getElementById("locale");
 			ele.innerHTML = "whatever";
-            testUtility();
+            //testUtility();
 			//testSqlite();
-			//testAWS();
+			testAWS();
 			//testVideoPlayer();
 			//testAudioPlayer();
 		</script>
