--- a/TestApp/TestAppIOS/TestAppIOS/www/index.html
+++ b/TestApp/TestAppIOS/TestAppIOS/www/index.html
@@ -14,9 +14,9 @@
 		<script>
 			var ele = document.getElementById("locale");
 			ele.innerHTML = "whatever";
-            testUtility();
+            //testUtility();
 			//testSqlite();
-			//testAWS();
+			testAWS();
 			//testVideoPlayer();
 			//testAudioPlayer();
 		</script>
