TestApp is tested for iOS.

--- a/TestApp/TestAppAndroid/app/src/main/assets/www/index.html
+++ b/TestApp/TestAppAndroid/app/src/main/assets/www/index.html
@@ -16,9 +16,9 @@
 			ele.innerHTML = "whatever";
             //testUtility();
 			//testSqlite();
-			testAWS();
+			//testAWS();
 			//testVideoPlayer();
-			//testAudioPlayer();
+			testAudioPlayer();
 		</script>
 	</body>
 </html>
