--- a/TestApp/TestAppAndroid/app/src/main/assets/www/index.html
+++ b/TestApp/TestAppAndroid/app/src/main/assets/www/index.html
@@ -5,7 +5,7 @@
         <meta name="msapplication-tap-highlight" content="no" />
        	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, viewport-fit=cover" />
         <!-- <link rel="stylesheet" href="css/BibleApp.css"/> -->
-        <script type="text/javascript" src="BibleApp.js"></script>
+        <script type="text/javascript" src="js/BibleApp.js"></script>
 	</head>
 	<body>
 		<h1>Hello World</h1>
@@ -15,10 +15,10 @@
 			var ele = document.getElementById("locale");
 			ele.innerHTML = "whatever";
             testUtility();
-			testSqlite();
+			/*testSqlite();
 			testAWS();
 			testVideoPlayer();
-			testAudioPlayer();
+			testAudioPlayer();*/
 		</script>
 	</body>
 </html>
