Android sqlite test is done in TestApp.

--- a/TestApp/TestAppAndroid/app/src/main/assets/www/index.html
+++ b/TestApp/TestAppAndroid/app/src/main/assets/www/index.html
@@ -14,9 +14,9 @@
 		<script>
 			var ele = document.getElementById("locale");
 			ele.innerHTML = "whatever";
-            testUtility();
-			/*testSqlite();
-			testAWS();
+            /*testUtility();*/
+			testSqlite();
+			/*testAWS();
 			testVideoPlayer();
 			testAudioPlayer();*/
 		</script>
