--- a/TestApp/www/index.html
+++ b/TestApp/www/index.html
@@ -14,10 +14,10 @@
 		<script>
 			var ele = document.getElementById("locale");
 			ele.innerHTML = "whatever";
-            /*testUtility();*/
-			testSqlite();
-			/*testAWS();
-			testVideoPlayer();
+            /*testUtility();*
+			/*testSqlite();*/
+			testAWS();
+			/*testVideoPlayer();
 			testAudioPlayer();*/
 		</script>
 	</body>
