Android TestApp video and audio are tested.

--- a/TestApp/TestAppAndroid/app/src/main/assets/www/index.html
+++ b/TestApp/TestAppAndroid/app/src/main/assets/www/index.html
@@ -16,9 +16,9 @@
 			ele.innerHTML = "whatever";
             /*testUtility();*
 			/*testSqlite();*/
-			testAWS();
-			/*testVideoPlayer();
-			testAudioPlayer();*/
+			/*testAWS();*/
+			/*testVideoPlayer();*/
+			testAudioPlayer();
 		</script>
 	</body>
 </html>
