--- a/TestApp/www/index.html
+++ b/TestApp/www/index.html
@@ -16,9 +16,9 @@
 			ele.innerHTML = "whatever";
             /*testUtility();*
 			/*testSqlite();*/
-			testAWS();
-			/*testVideoPlayer();
-			testAudioPlayer();*/
+			/*testAWS();*/
+			/*testVideoPlayer();*/
+			testAudioPlayer();
 		</script>
 	</body>
 </html>
