Removed some invalid characters from Video descriptions SafeBible/ios w/o cordova.

--- a/Versions/data/VideoIntro/KOG_OT-ENG.html
+++ b/Versions/data/VideoIntro/KOG_OT-ENG.html
@@ -2,7 +2,7 @@
 
 <p>The full movie is 222 minutes, grouped in 15 Episodes, and divided into two main parts:</p>
 
-<p>Part 1. Old Testament: The King Foretells His Plan {Episodes 1-8}
-<br/>Part 2. New Testament: The King Fulfills His Plan {Episodes 9-15}</p>
+<p>Part 1. Old Testament: The King Foretells His Plan (Episodes 1-8)
+<br/>Part 2. New Testament: The King Fulfills His Plan (Episodes 9-15)</p>
 
 <p style="text-align: center">© 2017 ROCK International<br/>http://king-of-glory.com</p>
