--- a/Versions/data/VideoIntro/KOG_OT-FRA.html
+++ b/Versions/data/VideoIntro/KOG_OT-FRA.html
@@ -2,7 +2,7 @@
 
 <p>Le film complet, qui dure 222 minutes, comprend 15 épisodes qui, eux, sont divisés en deux parties principales :</p>
 
-<p>Partie 1. L’Ancien Testament : Le Roi Annonce Son Plan {Épisodes 1 à 8};
-<br/>Partie 2. Le Nouveau Testament : Le Roi Accomplit Son Plan {Épisodes 9 à 15}.</p>
+<p>Partie 1. L’Ancien Testament : Le Roi Annonce Son Plan (Épisodes 1 à 8);
+<br/>Partie 2. Le Nouveau Testament : Le Roi Accomplit Son Plan (Épisodes 9 à 15).</p>
 
 <p style="text-align: center">© 2017 ROCK International<br/>http://king-of-glory.com</p>
