--- a/Versions/data/VideoIntro/KOG_OT-GAX.html
+++ b/Versions/data/VideoIntro/KOG_OT-GAX.html
@@ -2,7 +2,7 @@
 
 <p>Daawwini tunini cufumaani haga daqiqa d’ibba lamaafi didami lamaati, ka daawwi kud’ani shani qabdu, ka ammalle fula jabdu lamati gargari qoodani:</p>
 
-<p>Qoodi qara: Wald’aqiisa dullacha: Hayyuuni mala ufi duratu hime {Daawwi 1-8}
-<br/>Qoodi lameeso: Wald’aqiisa haraa: Hayyuuni mala ufi muummesa {Daawwi 9-15}</p>
+<p>Qoodi qara: Wald’aqiisa dullacha: Hayyuuni mala ufi duratu hime (Daawwi 1-8)
+<br/>Qoodi lameeso: Wald’aqiisa haraa: Hayyuuni mala ufi muummesa (Daawwi 9-15)</p>
 
 <p style="text-align: center">© 2017 ROCK International<br/>http://king-of-glory.com</p>
