--- a/Versions/data/VideoIntro/KOG_OT-SOM.html
+++ b/Versions/data/VideoIntro/KOG_OT-SOM.html
@@ -2,7 +2,7 @@
 
 <p>Filinkii oo dhan wuxuu ka buuxa 222 daqiiqad, oo ka kooban 15 dhacdooyin, oo loo qaybiyay laba qaybood oo waawayn.</p>
 
-<p>Qaybta 1. Axdigii Hore: Boqorka wuxuu sii sheegayaa Qorshehiisa {Dhacdooyinka 1-8}
-<br/>Qaybta 2. Axdiga Cusub: Boqorka wuxuu fulinayaa Qorshehiisa {Dhacdooyinka 9-15}</p>
+<p>Qaybta 1. Axdigii Hore: Boqorka wuxuu sii sheegayaa Qorshehiisa (Dhacdooyinka 1-8)
+<br/>Qaybta 2. Axdiga Cusub: Boqorka wuxuu fulinayaa Qorshehiisa (Dhacdooyinka 9-15)</p>
 
 <p style="text-align: center">© 2017 ROCK International<br/>http://king-of-glory.com</p>
