--- a/Versions/data/VideoIntro/KOG_OT-TUR.html
+++ b/Versions/data/VideoIntro/KOG_OT-TUR.html
@@ -2,8 +2,8 @@
 
 <p>Filmin tümü 222 dakikadır, 15 bölüm halinde gruplandırılmış ve iki ana bölüme ayrılmıştır:</p>
 
-<p>1.Bölüm Eski Antlaşma: Kral Planını Önceden Anlatıyor {1-8 bölümler}
-<br/>2.Bölüm Yeni Antlaşma: Kral Planını Gerçekleştiriyor {9-15 bölümler}</p>
+<p>1.Bölüm Eski Antlaşma: Kral Planını Önceden Anlatıyor (1-8 bölümler)
+<br/>2.Bölüm Yeni Antlaşma: Kral Planını Gerçekleştiriyor (9-15 bölümler)</p>
  
 <p style="text-align: center">© 2017 ROCK International<br/>http://king-of-glory.com</p>
 
