--- a/Versions/data/VideoIntro/KOG_OT-WOL.html
+++ b/Versions/data/VideoIntro/KOG_OT-WOL.html
@@ -2,8 +2,8 @@
 
 <p>Film bi lépp, tollu na ci 222 simili, mu nekk 15 dogat yu, ñoom ci seen bopp, defees na leen ñaari xaaj yu mag :</p>
 
-<p>Xaaj 1. Kóllëre gu jëkk gi : Buur bi yégle na Pexeem {dogat 1 ba 8} 
-<br/>Xaaj 2. Kóllëre gu bees gi : Buur bi matal na pexeem {dogat 9 à 15}.</p>
+<p>Xaaj 1. Kóllëre gu jëkk gi : Buur bi yégle na Pexeem (dogat 1 ba 8) 
+<br/>Xaaj 2. Kóllëre gu bees gi : Buur bi matal na pexeem (dogat 9 à 15).</p>
 
 <p style="text-align: center">© 2017 ROCK International<br/>http://king-of-glory.com</p>
 
