--- a/Versions/data/VideoIntro/KOG_OT-KIR.html
+++ b/Versions/data/VideoIntro/KOG_OT-KIR.html
@@ -2,8 +2,8 @@
 
 <p>Тасма толугу менен 222 мүнөт , 15 эпизод  жана эки негизги бөлүмдөн турат:</p>
 
-<p>1-чи бөлүгү. Байыркы Келишим: Падыша Өз Планын алдын ала айтып келген {1-8 эпизод}
-<br/>2-чи бөлүгү. Жаңы Келишим: Падыша Өз Планын аткарды {9-15 эпизод}</p>
+<p>1-чи бөлүгү. Байыркы Келишим: Падыша Өз Планын алдын ала айтып келген (1-8 эпизод)
+<br/>2-чи бөлүгү. Жаңы Келишим: Падыша Өз Планын аткарды (9-15 эпизод)</p>
 
 <p style="text-align: center">© 2017 ROCK International<br/>http://king-of-glory.com</p>
 
