--- a/Versions/data/VideoIntro/KOG_OT-SWH.html
+++ b/Versions/data/VideoIntro/KOG_OT-SWH.html
@@ -2,8 +2,8 @@
 
 <p>Urefu wa filamu hii ni dakika 222 na imeainishwa  katika mfululizo wa matukio 15 na katika sehemu mbili  kuu:</p>
 
-<p>Sehemu ya kwanza.Agano la kale:Ambapo mfalme huelezea mpango wake. {Matukio 1-8}
-<br/>Sehemu ya pili:Agano jipya:Mfalme hutekeleza mpango wake. {Matukio 9-15}</p>
+<p>Sehemu ya kwanza.Agano la kale:Ambapo mfalme huelezea mpango wake. (Matukio 1-8)
+<br/>Sehemu ya pili:Agano jipya:Mfalme hutekeleza mpango wake. (Matukio 9-15)</p>
 
 <p style="text-align: center">@ 2017 ROCK International<br/>http://king-of-glory.com</p>
 
