SafeBible Android www copied into the project.

--- a/SafeBible/SafeBible_Android/app/src/main/assets/www/index.html
+++ b/SafeBible/SafeBible_Android/app/src/main/assets/www/index.html
@@ -1,24 +1,27 @@
+<!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
+    <head>
+        <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
        	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, viewport-fit=cover" />
-        <!-- <link rel="stylesheet" href="css/BibleApp.css"/> -->
+        <link rel="stylesheet" href="css/BibleApp.css"/>
+        <script type="text/javascript" src="js/hammer.min.js"></script>
+        <script type="text/javascript" src="js/aes.js"></script>
+        <script type="text/javascript" src="js/BibleAppConfig.js"></script>
         <script type="text/javascript" src="js/BibleApp.js"></script>
-	</head>
-	<body>
-		<h1>Hello World</h1>
-		<h1 id="locale" style="border:solid">none2</h1>
-		<h1 id="response" style="border:solid">none</h1>
-		<script>
-			var ele = document.getElementById("locale");
-			ele.innerHTML = "whatever";
-            /*testUtility();*
-			/*testSqlite();*/
-			/*testAWS();*/
-			/*testVideoPlayer();*/
-			testAudioPlayer();
-		</script>
-	</body>
+        <script type="text/javascript" src="js/CallNative.js"></script>
+        <script type="text/javascript" src="licensed/greensock/TweenMax.js"></script>
+        <script type="text/javascript" src="licensed/greensock/Draggable.js"></script>
+        <script type="text/javascript" src="licensed/greensock/ThrowPropsPlugin.js"></script>
+        <script type="text/javascript" src="licensed/greensock/TimelineLite.js"></script>
+        <script type="text/javascript" src="licensed/greensock/ScrollToPlugin.js"></script>
+        <script>
+            var initializer = new AppInitializer();
+            initializer.begin();
+        </script>
+        <title>SafeBible</title>
+    </head>
+    <body>
+    </body>
 </html>
