--- a/SafeBible/SafeBible_Android/app/src/main/assets/www/index.html
+++ b/SafeBible/SafeBible_Android/app/src/main/assets/www/index.html
@@ -5,7 +5,7 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
        	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, viewport-fit=cover" />
-        <link rel="stylesheet" href="css/BibleApp.css"/>
+        <link rel="stylesheet" href="css/BibleApp.css" type="text/css" />
         <script type="text/javascript" src="js/hammer.min.js"></script>
         <script type="text/javascript" src="js/aes.js"></script>
         <script type="text/javascript" src="js/BibleApp.js"></script>
